# DriverSheet.com

./: .gitignore  pr.md  projects.txt
docs/: architecture.md
web/: install-radix.sh  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx
web/app/(site)/: page.tsx
web/app/auth/: page.tsx
web/app/dash/: page.tsx
web/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LoadingSkeleton.tsx  LogsTable.tsx  Navbar.tsx  StatsCard.tsx  TrialBanner.tsx  copyable-field.tsx
web/lib/: auth.ts  backend.ts
web/public/: README.md
web/types/: next-auth.d.ts
worker/: Cargo.toml
worker/migrations/: 0001_init.sql
worker/src/: api.rs  config.rs  db.rs  mail.rs  main.rs  models.rs  sheets.rs  state.rs
