[package]
name = "driversheet-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4", features = ["chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
once_cell = "1.19"
regex = "1.10"
rand = "0.8"
data-encoding = "2.5"
mailparse = "0.13"
tempfile = "3.10"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
anyhow = "1.0"
thiserror = "1.0"
yup-oauth2 = { version = "8.3", features = ["service_account"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
parking_lot = "0.12"
tokio-stream = "0.1"
pdf-extract = "0.6"
constant_time_eq = "0.2"
mailin-embedded = "0.8"
